--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,6 +21,7 @@
                 <link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet">
                 <link href="{{ asset('css/bootstrap-theme.min.css') }}" type="text/css" rel="stylesheet">
                 <link href="{{ asset('css/bootstrap-datepicker3.min.css') }}" type="text/css" rel="stylesheet">
+                <link href="{{ asset('css/datatables.min.css') }}" type="text/css" rel="stylesheet">
                 <link href="{{ asset('css/font-awesome.min.css') }}" type="text/css" rel="stylesheet">
                 <link href="{{ asset('css/app.css') }}" type="text/css" rel="stylesheet">
             {% else %}
@@ -145,6 +146,7 @@
     {% if app.debug %}
         <script src="{{ asset('js/jquery.min.js') }}"></script>
         <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+        <script src="{{ asset('js/datatables.min.js') }}"></script>
         <script src="{{ asset('js/bootbox.min.js') }}"></script>
         <script src="{{ asset('js/bootstrap-datepicker.min.js') }}"></script>
         <script src="{{ asset('js/bootstrap-datepicker.eu.min.js') }}"></script>
