change gulp to dev

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,16 +17,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         {% block head_style %}
             {# Override this block to add your own files! #}
-            {% if app.debug %}
+            {#{% if app.debug %}#}
                 <link href="{{ asset('css/bootstrap.min.css') }}" type="text/css" rel="stylesheet">
                 <link href="{{ asset('css/bootstrap-theme.min.css') }}" type="text/css" rel="stylesheet">
                 <link href="{{ asset('css/bootstrap-datepicker3.min.css') }}" type="text/css" rel="stylesheet">
                 <link href="{{ asset('css/datatables.min.css') }}" type="text/css" rel="stylesheet">
                 <link href="{{ asset('css/font-awesome.min.css') }}" type="text/css" rel="stylesheet">
                 <link href="{{ asset('css/app.css') }}" type="text/css" rel="stylesheet">
-            {% else %}
-                <link href="{{ asset('css/app.min.css') }}" type="text/css" rel="stylesheet">
-            {% endif %}
+            {#{% else %}#}
+                {#<link href="{{ asset('css/app.min.css') }}" type="text/css" rel="stylesheet">#}
+            {#{% endif %}#}
 
         {% endblock head_style %}
 
