--- a/app/Resources/views/arreta/index.html.twig
+++ b/app/Resources/views/arreta/index.html.twig
@@ -108,7 +108,7 @@
                                     </li>
                                     <li>
                                         {{ form_start(deleteforms[arreta.id],{'attr': {'id': 'deleteArretaForm' ~ arreta.id}}) }}
-                                        <a class="btnDelete" data-miid="{{ arreta.id }}" href="javascript:void(0)"><i class="fa fa-trash text-danger"></i></a>
+                                        <a class="btnDelete" data-miid="{{ arreta.id }}" href="#"><i class="fa fa-trash text-danger"></i></a>
                                         {{ form_end(deleteforms[arreta.id]) }}
                                     </li>
                                 </ul>
