--- a/app/Resources/views/kanala/index.html.twig
+++ b/app/Resources/views/kanala/index.html.twig
@@ -40,7 +40,7 @@
                         </li>
                         <li>
                             {{ form_start(deleteforms[kanala.id],{'attr': {'id': 'deleteKanalaForm' ~ kanala.id}}) }}
-                                <a class="btnDelete" data-miid="{{ kanala.id }}" href="javascript:void(0)"><i class="fa fa-trash text-danger"></i></a>
+                                <a class="btnDelete" data-miid="{{ kanala.id }}" href="#"><i class="fa fa-trash text-danger"></i></a>
                             {{ form_end(deleteforms[kanala.id]) }}
                         </li>
                     </ul>
