--- a/app/Resources/views/mota/index.html.twig
+++ b/app/Resources/views/mota/index.html.twig
@@ -40,7 +40,7 @@
                             </li>
                             <li>
                                 {{ form_start(deleteforms[mota.id],{'attr': {'id': 'deleteMotaForm' ~ mota.id}}) }}
-                                <a class="btnDelete" data-miid="{{ mota.id }}" href="javascript:void(0)"><i class="fa fa-trash text-danger"></i></a>
+                                <a class="btnDelete" data-miid="{{ mota.id }}" href="#"><i class="fa fa-trash text-danger"></i></a>
                                 {{ form_end(deleteforms[mota.id]) }}
                             </li>
                         </ul>
