--- a/app/Resources/views/result/new.html.twig
+++ b/app/Resources/views/result/new.html.twig
@@ -9,7 +9,7 @@
         <ul class="list-inline">
             <li>
                 <a class="btn btn-primary" href="{{ path('admin_result_index') }}"><i class="fa fa-arrow-left" aria-hidden="true"></i> Itzuli</a>
-                <a id="btnSave" class="btn btn-primary" href="javascript:void(0);"><i class="fa fa-floppy-o" aria-hidden="true"></i> Gorde </a>
+                <a id="btnSave" class="btn btn-primary" href="#"><i class="fa fa-floppy-o" aria-hidden="true"></i> Gorde </a>
             </li>
         </ul>
     </div>
