--- a/app/Resources/views/kanala/index.html.twig
+++ b/app/Resources/views/kanala/index.html.twig
@@ -20,6 +20,7 @@
 
 <div class="col-sm-12">
     <table class="table table-condensed table-hover table-striped">
+        <thead>
             <tr>
                 <th>Id</th>
                 <th>Kanala (eus)</th>
