Grafikak. ROLE_USER bada soilik bere arretak erakutsi.

--- a/app/Resources/views/arreta/index.html.twig
+++ b/app/Resources/views/arreta/index.html.twig
@@ -60,7 +60,7 @@
                 <tr>
                     {#<th></th>#}
                     <th>Id</th>
-                    <th>Fetxa</th>
+                    <th>Data</th>
                     <th>Nan</th>
                     <th>Tramiteak</th>
                     <th>Egoera</th>
