--- a/app/Resources/views/arreta/edit.html.twig
+++ b/app/Resources/views/arreta/edit.html.twig
@@ -5,10 +5,9 @@
     <div class="row">
         <div class="col-md-4">
             <div class="btn-group" role="group" aria-label="Default button group">
-                <a id="btnArretaBerria" class="btn btn-primary" href="#">Arreta Berria</a>
-                <a id="btnArretaGorde" class="btn btn-primary btn-success" href="#">Arreta Amaitu</a>
-                <a id="btnArretaEzabatu" class="btn btn-primary btn-danger" href="#">Arreta
-                                                                                                       Ezabatu</a>
+                <a id="btnArretaBerria" class="btn btn-primary" href="#">{{ "Arreta Berria" | trans }}</a>
+                <a id="btnArretaGorde" class="btn btn-primary btn-success" href="#">{{ "Arreta Amaitu" | trans }}</a>
+                <a id="btnArretaEzabatu" class="btn btn-primary btn-danger" href="#">{{ "Arreta Ezabatu" | trans }}</a>
             </div>
         </div>
         <div class="col-md-4" id="alertSpot">
@@ -344,44 +343,35 @@
                     <form id="frmGerkud">
                         <div class="form-group">
                             <div class="row">
-                                <div class="col-sm-6">
-                                    <label for="txtGerkudFetxa" class="control-label">Data:</label>
-                                    <input type="text" class="form-control" name="data[date]" id="txtGerkudFetxa">
-                                </div>
-                                <div class="col-sm-6">
+                                <div class="col-sm-12">
                                     <label for="txtGerkudFullName" class="control-label">Izen Abizenak:</label>
-                                    <input type="text" class="form-control" name="data[user][fullname]"
+                                    <input type="text" class="form-control" name="user[fullname]"
                                            id="txtGerkudFullName">
                                 </div>
 
                             </div>
 
                             <div class="row">
-                                <div class="col-sm-6">
-                                    <label for="txtGerkudBarrutia" class="control-label">Barrutia:</label>
-                                    {#<input type="text" class="form-control" name="data[address][locality]" id="txtGerkudBarrutia">#}
-                                    <select class="form-control" name="data[address][locality]" id="txtGerkudBarrutia">
-                                        <option value="" disabled selected>Aukeratu bat...</option>
-                                        <option value="Donibane">Donibane</option>
-                                        <option value="Trintxerpe">Trintxerpe</option>
-                                        <option value="Antxo">Antxo</option>
-                                        <option value="San Pedro">San Pedro</option>
+                                <div class="col-sm-12">
+                                    <label for="helbidea" class="control-label">Helbidea:</label>
+                                    <select name="helbidea" id="helbidea" class="form-control">
+                                        <option value="-1">Aukeratu...</option>
                                     </select>
                                 </div>
-                                <div class="col-sm-6">
-                                    <label for="txtGerkudHelbidea" class="control-label">Helbidea:</label>
-                                    <input type="text" class="form-control" name="data[address][address]"
-                                           id="txtGerkudHelbidea">
-                                </div>
+                                {#<div class="col-sm-12">#}
+                                {#<label for="txtGerkudHelbidea" class="control-label">Helbidea:</label>#}
+                                {#<input type="text" class="form-control" name="address[address]"#}
+                                {#id="txtGerkudHelbidea">#}
+                                {#</div>#}
                             </div>
                             <div class="row">
                                 <div class="col-sm-6">
                                     <label for="txtGerkudEmail" class="control-label">Email:</label>
-                                    <input type="text" class="form-control" name="data[user][mail]" id="txtGerkudEmail">
+                                    <input type="text" class="form-control" name="user[mail]" id="txtGerkudEmail">
                                 </div>
                                 <div class="col-sm-6">
                                     <label for="txtGerkudTelf" class="control-label">telf:</label>
-                                    <input type="text" class="form-control" name="data[user][phone]" id="txtGerkudTelf">
+                                    <input type="text" class="form-control" name="user[phone]" id="txtGerkudTelf">
                                 </div>
                             </div>
 
@@ -391,11 +381,11 @@
                         </div>
                         <div class="form-group">
                             <label for="txtGerkudOharrak">Oharrak</label>
-                            <textarea id="txtGerkudOharrak" class="form-control" rows="3" name="data[comments]"
+                            <textarea id="txtGerkudOharrak" class="form-control" rows="3" name="comments"
                                       placeholder=""></textarea>
                         </div>
-                        <input type="hidden" name="data[version]" value="2">
-                        <input type="hidden" name="data[key]" value="{{ horkonpon }}">
+                        <input type="hidden" name="version" value="2">
+                        <input type="hidden" name="key" value="{{ horkonpon }}">
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -460,6 +450,27 @@
                 console.log("incoming Text " + jqXHR.responseText);
             });
 
+
+            var urlHelbideak = "http://172.23.64.29:3000/";
+            $.getJSON(urlHelbideak, function ( data ) {
+                $.each(data, function ( key, val ) {
+                    $("#helbidea").append("<option value='" + val.izena + "'>" + val.izena + "</option>");
+                });
+            }).fail(function ( jqXHR, textStatus, errorThrown ) {
+                console.log("error " + textStatus);
+                console.log("incoming Text " + jqXHR.responseText);
+            });
+
+            $("#helbidea").on("change", function () {
+                var h = $(this).val();
+
+                if ( h === "-1" ) {
+                    $("#txtGerkudHelbidea").val("");
+                } else {
+                    $("#txtGerkudHelbidea").val(h);
+                }
+
+            });
 
         });
 
